fix_delay_loading_problem

--- a/Frontend/Shopcart/package.json
+++ b/Frontend/Shopcart/package.json
@@ -30,6 +30,7 @@
     "@fortawesome/angular-fontawesome": "^0.14.1",
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@material/snackbar": "^15.0.0-canary.7f224ddd4.0",
     "@ng-bootstrap/ng-bootstrap": "^16.0.0",
     "angular-font-awesome": "^3.1.2",
     "bootstrap": "^5.3.3",
@@ -38,6 +39,7 @@
     "font-awesome": "^4.7.0",
     "jquery": "^3.7.1",
     "js-to-ts-converter": "^0.18.2",
+    "localstorage-polyfill": "^1.0.1",
     "material-icons": "^1.13.12",
     "ng2-file-upload": "^7.0.1",
     "ngx-bootstrap": "^12.0.0",
