--- a/Frontend/Shopcart/angular.json
+++ b/Frontend/Shopcart/angular.json
@@ -42,7 +42,7 @@
               "./node_modules/primeng/resources/primeng.min.css"
             ],
             "scripts": [
-              "./node_modules/bootstrap/dist/js/bootstrap.js"
+              "./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
             ],
             "server": "src/main.server.ts",
             "prerender": true,
